--- a/airbean-api/package.json
+++ b/airbean-api/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "request": "^2.88.2",
+    "uuid": "^7.0.2",
     "uuid-random": "^1.3.0"
   }
 }
